feat(user): user component
